blocks/header/header.css
/* ... */
.header__link .icon,
.header__link .icon svg,
.header__close-menu .icon,
.header__close-menu .icon svg {
  height: 36px;
  width: 36px;
}

.header__action-item--close-menu {
  margin-left: auto;
  margin-bottom: 40px;
}

.header__close-menu {
  padding: 0;
  background: transparent;
  border: unset;
  display: flex;
  height: 36px;
  font-size: 36px;
  align-items: center;
  margin: 0;
}

.header__close-menu:focus,
.header__close-menu:hover {
  background-color: transparent;
}

.header__main-nav {
  list-style: none;
  padding: 0 0 24px;
  margin: 0;
  display: flex;
  flex-direction: column;
  gap: 0;
  width: 100%;
}

.header__main-nav-item {
  padding: 0;
  margin: 0;
}

.header__link.header__main-nav-link.header__link-accordion {
  padding: 12px 0;
  justify-content: space-between;
}

.header__link.header__link-accordion:any-link {
  justify-content: space-between;
  padding: 8px 0;
}

.header__link-accordion::after {
  content: '';
  background-image: url('/icons/dropdown-caret.svg');
  width: 24px;
  height: 24px;
  background-repeat: no-repeat;
  transition: transform 160ms ease-in-out;
  background-position: center;
  transform: rotate(-90deg);
}

.header__actions {
  display: flex;
  gap: 24px;
  width: 100%;
}

.header__main-links {
  display: flex;
  transition: var(--menu-animation);
  right: max(-375px, -95vw);
  position: absolute;
  width: 95vw;
  max-width: 375px;
  background: var(--header-background-color);
  top: 0;
  height: 100vh;
  overflow: hidden auto;
  flex-direction: column;
  padding: 40px 32px;
}

.header__main-links ul {
  position: relative;
}

.header__main-links ul::after {
  position: absolute;
  width: 100%;
  height: 1px;
  background: var(--line-subtle);
  content: '';
  bottom: 0;
}

.header__main-links ul:last-of-type::after {
  display: none;
}

.header .header__actions-list {
  list-style: none;
  margin: 0;
  align-items: center;
  padding: 24px 0 0;
}

.header__actions-list::after {
  content: '';
  border-bottom: solid 1px var(--c-secondary-silver);
  position: absolute;
  bottom: 0;
  width: calc(100% - 32px);
}

.header__actions-list .header__action-link .icon {
  display: none;
}

.header__action-link.header__hamburger-menu {
  padding: 0;
  margin: 0;
  background: inherit;
  border: none;
  justify-content: center;
}

.header__link.header__action-link {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 8px 0;
  text-wrap: nowrap;

  --color-icon: var(--header-color);
}

.header__action-link.header__action-link--button {
  background: var(--c-primary-gold);
  font-size: 14px;
  letter-spacing: 1.12px;
  padding: 16px 20px 12px;
  line-height: 1.1;
  color: var(--c-primary-black);
}

.header__action-link-text {
  align-items: flex-start;
}

.header__mobile-actions {
  display: flex;
  gap: 16px;
  width: 100%;
  justify-content: space-between;
}

.header__mobile-actions:only-child {
  justify-content: flex-end;
}

.header__link-description {
  display: none;
}

.header--hamburger-open .header__menu-overlay {
  position: fixed;
  top: 0;
  left: 0;
  background: rgb(20 20 20 / 40%);
  width: 100vw;
  height: 100vh;
  display: block;
}

.header--hamburger-open .header__action-link-text {
  display: inline;
}

.header--hamburger-open .header__main-links {
  right: 0;
}

.header__category-items {
  height: 100%;
  overflow: hidden;
}

.header .header__menu-content,
.header .header__category-items {
  margin: 0;
  list-style: none;
  padding: 0;
}

.header .header__category-items {
  margin: 0;
}

.header__category-items > .header__link:not(:first-of-type),
.header__menu-content picture,
.header__menu-content-footer {
  display: none;
}

.header__menu-open .header__menu-content,
.header__menu-open > .header__category-content > .header__category-items {
  display: flex;
  flex-direction: column;
}

.header__menu-content .header__menu-heading .icon {
  display: none;
}

.header__accordion-container {
  display: grid;
  background: var(--header-background-color);
  width: 100%;
  padding: 0 0 0 16px;
  height: 100%;
  grid-template-rows: 0fr;
  transition: grid-template-rows 500ms;
}

.header__menu-open > .header__accordion-container {
  grid-template-rows: 1fr;
}

.header__menu-open > .header__link-accordion::after {
  transform: rotate(0);
}

.header__accordion-content-wrapper {
  overflow: hidden;
}

.header__category-item > *,
.header__category-item > .header__link:any-link {
  display: none;
}

.header__category-item a:first-of-type:any-link:not(.standalone-link) {
  display: flex;
}

/* stylelint-disable-next-line no-descending-specificity */
.header__category-item h3 {
  display: flex;
  margin: 0;
  font-weight: normal;
}

/* stylelint-disable-next-line no-descending-specificity */
.header__category-item h3 a.header__link:any-link {
  font-family: var(--ff-body);
  font-size: 16px;
  color: var(--header-color);
  display: inline;
}

.menu-footer {
  display: none;
}

.header sup {
  font-size: 0.6em;
}

@media (min-width: 744px) {
  .header {
    padding: 0 clamp(32px, 2.8vw, 40px);
  }
}
/* ... */

